# MatrixOOP

./: .vimspector.json_  .ycm_extra_conf.py  .ycm_extra_conf.py_  Makefile  README.md  clang_custom.sh  run.sh
includes/: s21_matrix_oop.h
srcs/: s21_matrix_oop.cpp
tests/: CMakeLists.txt  run.sh
tests/googletest/googlemock/include/gmock/: gmock-matchers.h
tests/googletest/googletest/include/gtest/: gtest.h
tests/googletest/googletest/include/gtest/internal/: gtest-port.h
tests/includes/: test_matrix_oop.h
tests/srcs/: test_matrix_oop.cpp
